--- a/form-validation-custom.html
+++ b/form-validation-custom.html
@@ -34,7 +34,6 @@
             class="form-control validate-input"
             type="text"
             name="last-name"
-            
           />
           <small class="error" aria-live="polite"></small>
         </div>
@@ -59,6 +58,28 @@
             <option value="business">I'm interested in your software</option>
             <option value="technical">I need technical support</option>
           </select>
+          <small class="error" aria-live="polite"></small>
+        </div>
+
+        <div class="form-group hidden">
+          <label for="operating-system">Operating System</label>
+          <input
+            id="operating-system"
+            class="form-control validate-input"
+            type="text"
+            name="operating-system"
+          />
+          <small class="error" aria-live="polite"></small>
+        </div>
+
+        <div class="form-group hidden">
+          <label for="num-of-employees">Number of Employees</label>
+          <input
+            id="num-of-employees"
+            class="form-control validate-input"
+            type="number"
+            name="num-of-employees"
+          />
           <small class="error" aria-live="polite"></small>
         </div>
 
